# upwork-processing

./: .env.example  .gitignore  ARCHITECTURE.md  CEREBRAS_RATE_LIMITS.md  CONFIGURATION_SUMMARY.md  CRITERIA_AI_SYSTEMS_ENGINEER.md  CRITERIA_RECOMMENDATIONS.md  DATABASE_SCHEMA_ANALYSIS.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  KEYWORDS.md  MY_ACTUAL_TECH_STACK.md  POSTGRESQL_ACTUAL_STATUS.md  POSTGRESQL_SETUP.md  README.md  RESEARCH_ANALYSIS.md  TECHNOLOGY_REFERENCE.md  TECH_STACK.md  TECH_STACK_COMPARISON.md  UPWORK_PROFILE.md  alembic.ini  cli.py  docker-compose.yml  generate_html_report.py  handoff-prompt.md  init_extensions.sql  jobs_dataset_upwork_2026-02-05_04-09-24-623.json  main.py  opencode_functions.py  project.md  pyproject.toml  requirements.txt  update_urls.py
core/: cerebras.py  config.py  database.py
features/job_processing/models/: evaluation.py  expertise.py  job.py
features/job_processing/routes/: endpoints.py
features/job_processing/schemas/: evaluation.py  job.py
features/job_processing/services/: evaluator.py  ingestion.py
features/job_processing/utils/: __init__.py  url_parser.py
features/workflow/models/: __init__.py  tech_stack_decision.py  workflow.py  workflow_step.py
features/workflow/routes/: endpoints.py
features/workflow/schemas/: workflow.py
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_schema.py  add_session_id_to_workflows.py  add_workflow_tables_20260206.py  b722c11953c4_add_client_metrics_competition_data_and_.py
scripts/: launch_opencode.py
tests/features/: test_job_processing.py
(+4 files in other folders)
